--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Timothy Cassel
-description: As a friend once described me: Inventor, Data freak, pianist, hair icon
+description: Hopefully some interesting content
 github_username: ThePepperShaker
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "CasselBlog"
