--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ baseurl: "/CasselBlog" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: timothy-cassel
+    twitter: timothy_cassel
     github: ThePepperShaker
 
 # Set this to true to get LaTeX math equation support
